--- a/Creaturemon/app/src/main/res/layout/activity_all_creatures.xml
+++ b/Creaturemon/app/src/main/res/layout/activity_all_creatures.xml
@@ -7,6 +7,7 @@
     tools:context=".view.allcreatures.AllCreaturesActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
@@ -21,7 +22,12 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_all_creatures" />
+    <include
+        layout="@layout/content_all_creatures"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appbar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
